# hwFractal

./: .clang-format  .gitignore  README.md  build.zig  meson.build
.github/workflows/: cCI.yml  caCI.yml  cpp.yml  cppCD.yml  cppCI.yml  cvCI.yml
resources/: all.vs  config.conf  julia.fs  julia_double.fs  kernel.opencl  mandelbrot.fs  mandelbrot_double.fs  test.fs  test.vs
src/: _application.h  application.c  application.cpp  application.h  application.hpp  application_init.c  config.h  glw.c  glw.h  keybind.hpp  main.c  main.cpp  runtime_config.h  shader_loader.cpp  shader_loader.hpp  vec.h
src/clw/: clw.c  clw.h
src/cpuw/: cpuw.c  cpuw.h
src/exceptions/: runtime_exception.cpp  runtime_exception.hpp
src/gl/: control.cpp  control.hpp  gl.hpp  gl_controller.cpp  gl_controller.hpp  shaders.cpp  shaders.hpp
src/interfaces/: core_controller.cpp  core_controller.hpp
src/lib/talloc/: talloc.c
src/util/: config.cpp  config.hpp  printer.cpp  printer.h  printer.hpp
src/vkw/: vkw.c  vkw.h
